# ConnectDot

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: README.md  main.py  pyproject.toml
apps/web/: next.config.ts  package.json  vitest.config.ts
apps/web/src/app/: layout.tsx  page.tsx  styles.css
apps/web/src/app/api/vectorize/: route.ts
apps/web/src/lib/: export.ts  vectorize.ts
